# manim-mcp

./: LICENSE  README.md  main.py  pyproject.toml
src/manim_mcp/: __init__.py  server.py
