[project]
name = "manim-mcp"
version = "0.1.0"
description = "Manim integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "compasty", email = "compasty@example.com"}
]
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.5.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}